--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="text">
                         <img class="iconka" src="images/icons/site.svg" alt="">
-                        <p class="smail">https://www.behance.net/lerabel</p>
+                        <p class="smail"><a href="https://www.behance.net/lerabel">https://www.behance.net/lerabel</a></p>
                     </div>
                     <div class="text">
                         <img class="iconka" src="images/icons/geo.svg" alt="">
